--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,118 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    overflow-x: hidden;
+  overflow: hidden;
+  padding-top:50px;
 }
 
-#player {
-    position: fixed;
-    bottom: 15px;
-    left: 15px;
-}
 .names {
-    fill: none;
-    stroke: #fff;
-    stroke-linejoin: round;
-    }
-  
-      /* Tooltip CSS */
-      .d3-tip {
-      line-height: 1.5;
-      font-weight: 400;
-      font-family:"avenir next", Arial, sans-serif;
-      padding: 6px;
-      background: rgba(0, 0, 0, 0.6);
-      color: #FFA500;
-      border-radius: 1px;
-      pointer-events: none;
-      }
-  
-      /* Creates a small triangle extender for the tooltip */
-      .d3-tip:after {      
-        box-sizing: border-box;
-        display: inline;
-        font-size: 8px;
-        width: 100%;
-        line-height: 1.5;
-        color: rgba(0, 0, 0, 0.6);
-        position: absolute;
-        pointer-events: none;
-        
-      }
-  
-      /* Northward tooltips */
-      .d3-tip.n:after {
-        content: "\25BC";
-        margin: -1px 0 0 0;
-        top: 100%;
-        left: 0;
-        text-align: center;
-      }
-  
-      /* Eastward tooltips */
-      .d3-tip.e:after {
-        content: "\25C0";
-        margin: -4px 0 0 0;
-        top: 50%;
-        left: -8px;
-      }
-  
-      /* Southward tooltips */
-      .d3-tip.s:after {
-        content: "\25B2";
-        margin: 0 0 1px 0;
-        top: -8px;
-        left: 0;
-        text-align: center;
-      }
-  
-      /* Westward tooltips */
-      .d3-tip.w:after {
-        content: "\25B6";
-        margin: -4px 0 0 -1px;
-        top: 50%;
-        left: 100%;
-      }
-  
-  /*    text{
-        pointer-events:none;
-      }*/
-  
-      .details{
-        color:white;
-      }
+  fill: none;
+  stroke: #fff;
+  stroke-linejoin: round;
+}
+#app{
+  float: right;
+}
+/* Tooltip CSS */
+
+.d3-tip {
+  line-height: 1.5;
+  font-weight: 400;
+  font-family: "avenir next", Arial, sans-serif;
+  padding: 6px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #FFA500;
+  border-radius: 1px;
+  pointer-events: none;
+}
+
+/* Creates a small triangle extender for the tooltip */
+
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 8px;
+  width: 100%;
+  line-height: 1.5;
+  color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  pointer-events: none;
+}
+
+/* Northward tooltips */
+
+.d3-tip.n:after {
+  content: "\25BC";
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+  text-align: center;
+}
+
+/* Eastward tooltips */
+
+.d3-tip.e:after {
+  content: "\25C0";
+  margin: -4px 0 0 0;
+  top: 50%;
+  left: -8px;
+}
+
+/* Southward tooltips */
+
+.d3-tip.s:after {
+  content: "\25B2";
+  margin: 0 0 1px 0;
+  top: -8px;
+  left: 0;
+  text-align: center;
+}
+
+/* Westward tooltips */
+
+.d3-tip.w:after {
+  content: "\25B6";
+  margin: -4px 0 0 -1px;
+  top: 50%;
+  left: 100%;
+}
+
+/*   
+text{
+  pointer-events:none;
+}
+*/
+
+.details {
+  color: white;
+}
+
+.player {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 320px;
+  height: 180px;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 100ms linear;
+  -moz-transition: all 100ms linear;
+  -ms-transition: all 100ms linear;
+  -o-transition: all 100ms linear;
+  transition: all 100ms linear;
+}
+
+.player #player {
+  width: 100%;
+  height: 100%;
+}
+
+.player.active {
+  width: 100vw;
+  height: 100vh;
+  padding: 45px;
+}
