--- a/css/chart.css
+++ b/css/chart.css
@@ -11,11 +11,18 @@ svg {width: 100%;}
 }
 
 .bar {
+    border-style: solid;
+    border-color: white;
+    border-width:10px;
     fill: orange;
 }
 
 .bar:hover {
+    border-style: solid;
+    border-color: white;
+    border-width:10px;
     fill: orangered;
+
 }
 
 .x.axis path {
